--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -7378,6 +7378,7 @@
 }
 .sectionOverview .sectionOverviewSummary .sectionOverviewSummary-bottom .spanTitle {
   margin-bottom: 6px;
+  margin-left: 0px;
   color: #303030;
   font-size: 10.5pt;
   font-family: Arial;
